已学完Python基础语法

--- a/Python_notes/0x10 基础语法.md
+++ b/Python_notes/0x10 基础语法.md
@@ -1,5 +1,7 @@
 # 0x10 基础语法
 
+
+
 ## 0x11 变量类型
 
 1. 变量类型
@@ -19,10 +21,13 @@
    - `type(a)`
 
 
+
 ## 0x12 输入输出
 
 - `input()` 输入
 - `print()` 输出
+  - `print('%s' % str)`
+
 
 
 ## 0x13 字符串函数
@@ -35,49 +40,345 @@
 6. `str.split(c)` 切割字符串，返回类型为 $list$
 7. `str.upper()/str.lower()` 修改大小写
 
-**上述函数都是浅拷贝**
+**上述函数都是浅拷贝**，不会修改字符串的值
+
+
 
 ## 0x14 列表
 
-1. 添加元素
-   - `list.append(x)` 在 $list$ 末尾添加元素
-   - `list.insert(idex, x)` 在指定位置添加元素
-   - `list1.extend(list2)` 合并列表
-2. 修改元素
-   - `list[0] = 985`
-3. 查询元素
-   - `in`
-   - `not in`
-4. 删除元素
-   - `del list[0]` 根据下表进行删除
-   - `list.pop()` 删除最后一个元素
-   - `list.remove(x)` 删除第一个值为 $x$ 的元素
+### 添加元素
+
+- `list.append(x)` 在 $list$ 末尾添加元素
+- `list.insert(idex, x)` 在指定位置添加元素
+- `list1.extend(list2)` 合并列表
+
+### 修改元素
+
+- `list[0] = 985`
+
+### 查询元素
+
+- `in`
+- `not in`
+
+### 删除元素
+
+- `del list[0]` 根据下表进行删除
+- `list.pop()` 删除最后一个元素
+- `list.remove(x)` 删除第一个值为 $x$ 的元素
+
+
 
 ## 0x15 元组
 
 > 元组和列表类似，不同之处在于**元组的元素不能修改**。元组使用小括号，列表使用方括号。
 
-1. 访问元组
+### 访问元组
 
-   - `tuple[0]`
+- `tuple[0]`
 
-2. 修改元组
+### 修改元组
 
-   - 不能修改元组的数据，包括**不能删除其中的元素**
+- 不能修改元组的数据，包括**不能删除其中的元素**
 
-3. 定义只有一个数据的元组
+### 定义只有一个数据的元组
 
-   ```python
-   a = (11, )	# 只有一个元素的元组，必须在元素后写一个逗号
-   ```
+```python
+a = (11, )	# 只有一个元素的元组，必须在元素后写一个逗号
+```
+
+
 
 ## 0x16 切片
 
 > 切片是指对操作的对象截取其中一部分的操作。**字符串、列表、元组**都支持切片的操作。
->
 > 语法：`[起始: 结束: 步长]`，也可以简化 `[起始: 结束]`
+> 注意：选取的区间从“起始”位开始，到“结束”位的前一位结束（不包括结束位本身），步长表示选取间隔
+
+```python
+# 索引是通过下标取某一个元素
+# 切片是通过下标取某一段元素
+
+s = "Hello World!"
+
+print(s[1:])	# ello World!
+print(s[1: 5])	# Hello
+print(s[1: 5: 2])	# el
+```
+
+
+
+## 0x17 字典
+
+### 定义字典
+
+```python
+personInfo = {
+    'name': 'jianghao',
+    'age': 18
+}
+print('%s' % personInfo)
+```
+
+### 查看元素
+
+```python
+print(personInfo['sex'])	# 获取不存在的key，会出现异常
+
+print(personInfo.get('sex'))	# 获取不存在的key，获取到空的内容，不会出现异常
+print(personInfo.get('sec', '男'))	# 获取不存在的key，可以提供一个默认值
+```
+
+### 修改元素
+
+- `personInfo['name'] = jh`
+
+### 添加元素
+
+- 如果在使用**变量名[key] = 数据**时，这个key在字典中不存在，那么就会新增这个元素。
+- `personInfo['sex'] = '男'`
+
+### 删除元素
+
+```python
+del personInfo('name')	# 删除某一元素
+del personInfo	# 删除整个字典
+print(personInfo)	# NameError: name 'personInfo' is not defined
+
+personInfo.clear()	# 清空字典，但是保留字典对象
+```
+
+### 遍历字典
+
+```python
+# 遍历字典的key
+for key in personInfo.keys():
+    print(key)
+    
+# 遍历字典的value
+for values in personInfo.values():
+    print(values)
+
+# 遍历字典的key和value
+for key, value in person.items():
+    print(key, value)
+
+# 遍历字典的value
+for item in person.items():
+    print(item)
+```
+
+
+
+## 0x18 函数
+
+### 定义/调用
+
+```python
+f1()
+
+def f1():
+	print('函数')
+```
+
+### 参数/返回值
+
+```python
+c = add(a, b)
+
+def add(a, b):
+    return a + b
+```
+
+
+
+## 0x19 文件
+
+### 文件的打开与关闭
+
+1. **打开文件、创建文件**
+
+   - 在python，使用open函数，可以打开一个已经存在的文件，或者创建一个新文件
+   - `open(文件路径, 访问模式)`
+
+   ```python
+   f = open('text', 'w')
+   ```
+
+2. **文件路径**
+
+   - 绝对路径：指的是绝对位置，完整地描述了目标的所在地，所有目录层级关系一目了然
+     - 例如：`E:\python`
+   - 相对路径：是从当前文件所在的文件夹开始的路径
+     - `test.txt` 是在当前文件夹查找 `test.txt` 文件
+     - `./test.txt` 也是在当前文件夹查找 `test.txt` 文件，`./` 表示的是当前文件夹
+     - `../test.txt` 是从当前文件夹的上一级文件夹里查找 `test.txt` 文件。`../` 表示的是上一级文件夹
+     - `demo/test.txt` 是在当前文件夹里查找 `demo` 这个文件夹，并在这个文件夹里查找 `test.txt` 文件。
+
+3. **访问模式**
+
+   | 访问模式 | 说明                                                         |
+   | :------: | ------------------------------------------------------------ |
+   |    r     | 以只读的方式打开文件。文件的指针将会放在文件的开头。如果文件不存在，则报错。**这是默认模式。** |
+   |    w     | 打开一个文件只用于写入。如果该文件已存在，则将其覆盖。如果该文件不存在，创建新文件。 |
+   |    a     | 打开一个文件用于追加。如果该文件已存在，文件指针将会放在文件的结尾。也就是说，新的内容将会被写入到已有内容之后。如果该文件不存在，创建新文件进行写入。 |
+   |    r+    | 打开一个文件用于读写。文件指针将会放在文件的开头。           |
+   |    w+    | 打开一个文件用于读写。如果该文件已存在，则将其覆盖。如果该文件不存在，创建新文件。 |
+   |    a+    | 打开一个文件用于读写。如果该文件已存在，文件指针将会放在文件的结尾。文件打开时会是追加模式。如果该文件不存在，创建新文件用于读写。 |
+   |    rb    | 以二进制格式打开一个文件用于只读。文件指针将会放在文件的开头。 |
+   |    wb    | 以二进制格式打开一个文件只用于写入。如果该文件已存在，则将其覆盖。如果该文件不存在，创建新文件。 |
+   |    ab    | 以二进制格式打开一个文件用于追加。如果该文件已存在，文件指针将会放在文件的结尾。也就是说，新的内容将会被写入到已有内容之后。如果该文件不存在，创建新文件进行写入。 |
+   |   rb+    | 以二进制格式打开一个文件用于读写。文件指针将会放在文件的开头。 |
+   |   wb+    | 以二进制格式打开一个文件用于读写。如果该文件已存在，则将其覆盖。如果该文件不存在，创建新文件。 |
+   |   ab+    | 以二进制格式打开一个文件用于读写。如果该文件已存在，文件指针将会放在文件的结尾。如果该文件不存在，创建新文件用于读写。 |
+
+4. **关闭文件**
+
+   ```python
+   # 新建一个文件，文件名为：test.txt
+   f = open('test.txt', 'w')
+   
+   # 关闭这个文件
+   f.close()
+   ```
+
+### 文件的读写
+
+1. **写数据**
+
+   ```python
+   f = open('test.txt', 'w')
+   f.write('hello world, I am here!\n' * 5)	# 如果文件存在，会先清空原来的数据，然后写入，因为文件的权限是'w'
+   f.close()
+   ```
+
+2. **读数据**
+
+   ```python
+   f = open('test.txt', 'r')
+   
+   # 默认情况下，read 是一字节一字节的读，效率比较低
+   content = f.read()
+   
+   # readline 只能读取一行
+   content = f.readline()
+   
+   # readlines 可以按照行来读取，但是会将所有的数据都读取到，并且以一个列表形式返回
+   # 而列表的元素，是一行一行的数据
+   content = f.readlines()
+   file.close()
+   ```
+
+### 序列化和反序列化
+
+> 通过文件操作，我们可以将字符串写入到一个本第二件。但是，如果是一个对象（如列表、字典、元组等），就无法直接写入到一个文件里，需要对这个对象进行序列化，然后才能写入到文件里。
 >
-> 注意：
+> 设计一套协议，按照某种规则，把内存中的数据转换为字节序列，保存到文件，这就是序列化，反之，从文件的字节序列恢复到内存中，就是反序列化。
+>
+> Python中提供了JSON这个模块用来实现数据的序列化和反序列化。
+
+1. **$JSON$ 模块**
+
+   JSON是一种轻量级的数据交换标准。JSON的本质是字符串。
+
+2. **使用 $JSON$ 实现序列化**
+
+   JSON提供了dump和dumps方法，将一个对象进行序列化。
+
+   - **$dump$**
+
+     - 在将对象转换为字符串的同时，指定一个文件的对象，然后把转换后的字符串写入到这个文件里
+
+     ```python
+     import json
+     file = open('names.txt', 'w')
+     names = ['zhangsan', 'lisi', 'wangwu']
+     # file.write(names)	出错，不能直接将列表写入到文件里
+     
+     # 转换成字符串，写入到文件里
+     json.dump(nams, file)
+     file.close()
+     ```
+
+   - **$dumps$**
+
+     - 把对象转换成为字符串，本身不具备将数据写入到文件的功能。
+     
+     ```python
+     import json
+     file = open('names.txt', 'w')
+     names = ['zhangsan', 'lisi', 'wangwu']
+     # file.write(names)	出错，不能直接将列表写入到文件里
+     
+     # 可以调用 json 的 dumps 方法，传入一个对象参数
+     result = json.dumps(names)
+     
+     # dumps 方法得到的结果是一个字符串
+     print(type(result))	# <class 'str'>
+     
+     # 可以将字符串写入到文件里
+     file.write(result)
+     file.close()
+     ```
+
+3. **使用 $JSON$ 实现反序列化**
+
+   - **$load$**
+
+     可以直接从文件里读取JSON字符串，并且把其转换成python对象
+
+     ```python
+     import json
+     file = open('names.txt', 'r')
+     
+     result = json.load(file)
+     f.close()
+     ```
+
+   - **$loads$**
+
+     将JSON字符串转换成python对象
+
+     ```python
+     import json
+     file = open('names.txt', 'r')
+     
+     content = file.read()
+     print(type(content))	# <class 'str'>
+     
+     # 将json字符串变成python对象
+     result = json.loads(content)
+     print(type(result))	# <class 'list'>
+     file.close()
+     ```
+
+
+
+## 0x1A 异常
+
+> 程序在运行过程中，由于我们的编码不规范，或者其他原因，导致我们的程序无法继续运行。此时，程序就会出现异常。如果我们不对异常进行处理，程序可能会由于异常直接中断掉。为了保证程序的健壮性，我们在程序设计里提出了异常处理这个概念。
+
+### $try...except$ 语句
+
+> `try...except` 语句可以对代码运行过程中可能出现的异常进行处理。
+
+```python
+try:
+	f = open('test.txt', 'r')
+	print(f.read())
+except FileNotFoundError:	# 异常类型
+	print('文件没有找到，请检查文件名称是否正确')
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
