--- a/Python_notes/0x10 基础语法.md
+++ b/Python_notes/0x10 基础语法.md
@@ -202,7 +202,13 @@ def add(a, b):
    - `open(文件路径, 访问模式)`
 
    ```python
-   f = open('text', 'w')
+   f = open('text.txt', 'w')
+   
+   # open方法默认情况下使用的是gbk编码，如果要保留汉字，需要指定编码utf-8
+   f = open('text.txt', 'w', encoding = 'utf-8')
+   
+   with open('douban.json', 'w', encoding = 'utf-8') as fp:
+       fp.write(content)
    ```
 
 2. **文件路径**
