done XPath learning

--- a/Python_notes/0x20 爬虫.md
+++ b/Python_notes/0x20 爬虫.md
@@ -381,10 +381,104 @@ proxies = random.choice(proxies_pool)
 
 - `etree.parse('xx.html')`
 
+#### 服务器响应文件
+
+- `etree.HTML(response.read().decode('utf-8'))`
+
+#### xpath 语法
+
+- `tree.xpath(xpath路径)`
+
+    1. 路径查询
+       - `//` 查询所有节点，不考虑层级关系
+       - `/` 找直接子节点
+    2. 谓词查询
+       - `//div[@id]`
+       - `//div[@id = 'maincontent']`
+    3. 属性查询
+       - `//@class`
+    4. 模糊查询
+       - `//div[contains(@id, "he")]`
+       - `//div[starts-with(@id, "he")]`
+    5. 内容查询
+       - `//div/h1/text()`
+    6. 逻辑运算
+       - `//div[@id = "head" and @class = "s_down"]`
+       - `//title | //price`
+    
+    ```python
+    from lxml import etree
+    
+    html_tree = etree.parse('test.html')
+    # 查找ul下面的li
+    li_list = tree.xpath('//body/ul/li')
+    # 查找所有有id的属性的li标签
+    li_list = tree.xpath('//ul/li[@id]')
+    ```
+    
+    ```python
+    from lxml import etree
+    import urllib.request
+    
+    url = 'https://www.baidu.com/'
+    headers = {
+        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36'
+    }
+    
+    request = urllib.request.Request(url = url, headers = headers)
+    response = urllib.request.urlopen(request)
+    content = response.read().decode('utf-8')
+    
+    html_tree = tree.HTML(content)
+    result = html_tree.xpath('//input[@id = "su"]/@value')	# ['百度一下'] xpath返回的是列表
+    result = html_tree.xpath('//input[@id = "su"]/@value')[0]	# 百度一下
+    ```
+
+#### 案例
+
+站长素材图片抓取并且下载（http://sc.chinaz.com/tupian/shuaigetupian.html）--》懒加载
+
 ```python
+import urllib.request
+from lxml import etree
+
+def main():
+    start_page = int(input("Enter start page: "))
+    end_page = int(input("Enter end page: "))
+    for page in range(start_page, end_page + 1):
+        request = create_request(page)
+        content = get_content(request)
+        download(content)
+
+def create_request(page):
+    if page == 1:
+        url = 'https://sc.chinaz.com/tupian/fengjing.html'
+    else:
+        url = 'https://sc.chinaz.com/tupian/fengjing_' + str(page) + '.html'
+
+    headers = {
+        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36'
+    }
+    return urllib.request.Request(url = url, headers = headers)
+
+def download(content):
+    # 下载图片
+    tree = etree.HTML(content)
+    name_list = tree.xpath('//div[@class = "container"]//img/@alt')
+    src_list = tree.xpath('//div[@class = "container"]//img/@data-original')    # src可能会懒加载
+    for i in range(len(name_list)):
+        name = name_list[i]
+        length = len(src_list[i])
+        url = 'https:' + src_list[i][:length - 6] + src_list[i][length - 4:]    # 去掉_s，提高清晰度
+        urllib.request.urlretrieve(url = url, filename = './images/' + name + '.jpg')
+
+def get_content(request):
+    response = urllib.request.urlopen(request)
+    return response.read().decode('utf-8')
+
+if __name__ == '__main__':
+    main()
 ```
-
-
 
 
 
