done JSONPath learning

--- a/Python_notes/0x20 爬虫.md
+++ b/Python_notes/0x20 爬虫.md
@@ -360,15 +360,15 @@ proxies = random.choice(proxies_pool)
 
 ## 0x22 解析
 
-### 2.2.1 xpath
+### 2.2.1 $xpath$
 
 > 能过帮助我们获取网页中部分数据的方式
 
-#### 使用
+#### 安装 & 使用
 
 1. chrome 浏览器安装 XPath Helper 插件
 
-   - `ctrl + shift + x`
+   - `ctrl + shift + x` 快捷键调用
 
 2. 安装 lxml 库
 
@@ -385,7 +385,7 @@ proxies = random.choice(proxies_pool)
 
 - `etree.HTML(response.read().decode('utf-8'))`
 
-#### xpath 语法
+#### $xpath$ 语法
 
 - `tree.xpath(xpath路径)`
 
@@ -436,7 +436,7 @@ proxies = random.choice(proxies_pool)
 
 #### 案例
 
-站长素材图片抓取并且下载（http://sc.chinaz.com/tupian/shuaigetupian.html）--》懒加载
+站长素材图片抓取并且下载（http://sc.chinaz.com/tupian/shuaigetupian.html）
 
 ```python
 import urllib.request
@@ -479,6 +479,180 @@ def get_content(request):
 if __name__ == '__main__':
     main()
 ```
+
+
+
+### 2.2.2 $JSONPath$
+
+> XPath 最初是为 XML 文档设计的，其语法基于 XML 的树状结构（元素、属性、文本节点等）。XPath 无法直接处理 JSON 数据，需先将 JSON 转换为 XML 格式，过程繁琐且可能丢失数据类型（如 JSON 的布尔值、数字在 XML 中会被转为字符串）。
+>
+> 而 JSONPath 能够直接处理 JSON 数据结构，无需中间转换，解析速度更快。与 XPath 不同，**JsonPath 只能解析本地文件。**
+>
+> 教程：（http://blog.csdn.net/luxideyao/article/details/77802389）
+
+#### 安装 $jsonpath$ 库
+
+- 在 `设置 - 项目：xxx - Python解释器` 中查看解释器路径
+- 打开cmd，在解释器路径下输入 `pip install jsonpath`
+
+![0x20_安装jsonpath库](./assets/0x20_安装jsonpath库.png)
+
+#### $JSONPath$ 语法
+
+| XPath | JSONPath           | Description                                                  |
+| :---- | :----------------- | :----------------------------------------------------------- |
+| /     | $                  | 表示根元素                                                   |
+| .     | @                  | 当前元素                                                     |
+| /     | . or []            | 子元素                                                       |
+| ..    | n/a                | 父元素                                                       |
+| //    | ..                 | 递归下降，JSONPath是从E4X借鉴的。所有**子孙节点**。          |
+| *     | *                  | 通配符，表示所有的元素                                       |
+| @     | n/a                | 属性访问字符                                                 |
+| []    | []                 | 子元素操作符                                                 |
+| \|    | [,]                | 连接操作符在XPath 结果合并其它结点集合。JSONPath允许name或者数组索引。 |
+| n/a   | [start: end: step] | 数组分割操作，从ES4借鉴                                      |
+| []    | ?()                | 应用过滤表达式                                               |
+| n/a   | ()                 | 脚本表达式，使用在脚本引擎下面。                             |
+| ()    | n/a                | XPath分组                                                    |
+
+#### 使用
+
+- `store.json`
+
+    ```json
+    {
+      "store": {
+        "book": [
+          {
+            "category": "reference",
+            "author": "Nigel Rees",
+            "title": "Sayings of the Century",
+            "price": 8.95
+          },
+          {
+            "category": "fiction",
+            "author": "Evelyn Waugh",
+            "title": "Sword of Honour",
+            "price": 12.99
+          },
+          {
+            "category": "fiction",
+            "author": "Herman Melville",
+            "title": "Moby Dick",
+            "isbn": "0-553-21311-3",
+            "price": 8.99
+          },
+          {
+            "category": "fiction",
+            "author": "J. R. R. Tolkien",
+            "title": "The Lord of the Rings",
+            "isbn": "0-395-19395-8",
+            "price": 22.99
+          }
+        ],
+        "bicycle": {
+          "color": "red",
+          "price": 19.95
+        }
+      }
+    }
+    ```
+    
+    | XPath                    | JSONPath                            | 结果                                        |
+    | ------------------------ | ----------------------------------- | ------------------------------------------- |
+    | `/store/book/author`     | `$.store.book[*].author`            | 店中所有书的作者                            |
+    | `//author`               | `$..author`                         | 所有的作者                                  |
+    | `/store/*`               | `$.store.*`                         | store 的所有元素，即所有的 books 和 bicycle |
+    | `/store//price`          | `$.store..price`                    | store 里面所有东西的 price                  |
+    | **`//book[3]`**          | **`$..book[2]`**                    | **第三个书**                                |
+    | `//book[last()]`         | `$..book[(@.length - 1)]`           | 最后一本书                                  |
+    | `//book[position() < 3]` | `$..book[0, 1]`<br />`$..book[: 2]` | 前面两本书                                  |
+    | `//book[isbn]`           | `$..book[?(@.isbn)]`                | 过滤出所有的包含 isbn 的书                  |
+    | `//book[price < 10]`     | `$..book[?(@.price < 10)]`          | 过滤出价格低于 10 的书                      |
+    | `//*`                    | `$..*`                              | 所有元素                                    |
+    
+    ```python
+    import json
+    import jsonpath
+    
+    # 将json文件中的json数据反序列化为python对象
+    obj = json.load(open('store.json', 'r', encoding = 'utf-8'))
+    # 使用jsonpath表达式提取json数据中的author字段
+    book_list = jsonpath.jsonpath(obj, '$..book[?(@.isbn)]')
+    ```
+
+#### 案例
+
+获取淘票票网站中的各城市地点
+
+```python
+import urllib.request
+
+url = 'https://www.taopiaopiao.com/cityAction.json?activityId&_ksTS=1751608722576_116&jsoncallback=jsonp117&action=cityAction&n_s=new&event_submit_doGetAllRegion=true'
+
+headers = {
+    # ':authority': 'www.taopiaopiao.com',
+    # ':method': 'GET',
+    # ':path': '/cityAction.json?activityId&_ksTS=1751608722576_116&jsoncallback=jsonp117&action=cityAction&n_s=new&event_submit_doGetAllRegion=true',
+    # ':scheme': 'https',
+    'accept': 'text/javascript, application/javascript, application/ecmascript, application/x-ecmascript, */*; q=0.01',
+    # 'accept-encoding': 'gzip, deflate, br, zstd',
+    'accept-language': 'zh-CN,zh;q=0.9',
+    'bx-v': '2.5.31',
+    'cookie': 'cna=vVbuIIxLilICASeqUJcR4fTB; xlly_s=1; tb_city=110100; tb_cityName="sbG+qQ=="; dnk=; t=3ed647b51989f26b0131b0d329e54ea9; lgc=; sn=; _tb_token_=3895b33b5ebe; cookie2=1cdb70b443da6bbf02fd559ba8a2a370; _nk_=; isg=BIKCeExEXjoFVULmlLYEac8104jkU4ZthhwUesyYQfWgHyOZtOTdfSoZzxtjSf4F',
+    'priority': 'u=1, i',
+    'referer': 'https://www.taopiaopiao.com/index.htm?spm=a1z21.3046609.header.3.820b112apdSH9K&n_s=new',
+    'sec-ch-ua': '"Not)A;Brand";v="8", "Chromium";v="138", "Google Chrome";v="138"',
+    'sec-ch-ua-mobile': '?0',
+    'sec-ch-ua-platform': '"Windows"',
+    'sec-fetch-dest': 'empty',
+    'sec-fetch-mode': 'cors',
+    'sec-fetch-site': 'same-origin',
+    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36',
+    'x-requested-with': 'XMLHttpRequest'
+}
+
+request = urllib.request.Request(url = url, headers = headers)
+response = urllib.request.urlopen(request)
+content = response.read().decode('utf-8').split('(')[1].split(')')[0]	# 切割，保留json格式
+
+with open('city.json', 'w', encoding = 'utf-8') as fp:
+    fp.write(content)
+
+import json
+import jsonpath
+
+obj = json.load(open('city.json', 'r', encoding = 'utf-8'))
+city_list = jsonpath.jsonpath(obj, '$.returnValue..regionName')
+print(city_list)
+```
+
+
+
+#### 2.2.3 $BeautifulSoup$
+
+> BeautifulSoup 简称 bs4。和 lxml 一样，BeautifulSoup 是一个 html 解析器，主要功能也是解析和提取数据。
+>
+> 缺点：效率没有 lxml 的效率高。
+> 优点：接口设计人性化，使用方便
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
