done bs4 learning

--- a/Python_notes/0x20 爬虫.md
+++ b/Python_notes/0x20 爬虫.md
@@ -495,7 +495,7 @@ if __name__ == '__main__':
 - 在 `设置 - 项目：xxx - Python解释器` 中查看解释器路径
 - 打开cmd，在解释器路径下输入 `pip install jsonpath`
 
-![0x20_安装jsonpath库](./assets/0x20_安装jsonpath库.png)
+	![0x20_安装jsonpath库](./assets/0x20_安装jsonpath库.png)
 
 #### $JSONPath$ 语法
 
@@ -629,18 +629,84 @@ print(city_list)
 
 
 
-#### 2.2.3 $BeautifulSoup$
+### 2.2.3 $BeautifulSoup$
 
 > BeautifulSoup 简称 bs4。和 lxml 一样，BeautifulSoup 是一个 html 解析器，主要功能也是解析和提取数据。
 >
 > 缺点：效率没有 lxml 的效率高。
 > 优点：接口设计人性化，使用方便
 
+#### 安装 $BeautifulSoup$ 库
 
+- 在 `设置 - 项目：xxx - Python解释器` 中查看解释器路径
+- 打开cmd，在解释器路径下输入 `pip install bs4`
 
+    ![0x20_安装beautifulsoup4库](./assets/0x20_%E5%AE%89%E8%A3%85beautifulsoup4%E5%BA%93.png)
 
+#### 引用
 
+- `from bs4 import BeautifulSoup`
 
+#### 本地文件生成对象
+
+- `soup = BeautifulSoup(open('test.html', encoding = 'utf-8'), 'lxml')`
+- 注意：默认打开文件的编码格式是 gdk，所以要指定打开编格式
+
+#### 服务器相应的文件生成对象
+
+- `soup = BeautifulSoup(response.read().decode(), 'lxml')`
+
+#### $BeautifulSoup$ 语法
+
+```html
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <ul>
+        <li id="">张三</li>
+        <li>李四</li>
+        <li>王五</li>
+    </ul>
+    <a href="1">赵六</a>
+    <a title="2">田七</a>
+</body>
+</html>
+```
+
+- 根据标签名查找
+
+  | 标签        | 描述                                                         | 示例                      |
+  | ----------- | ------------------------------------------------------------ | ------------------------- |
+  | `.li`       | 只能找到第一个 li 标签内容，返回结果为 `<li id="">张三</li>` | `tag = soup.li`           |
+  | `.li.name`  | 只能找到第一个 li 标签的名称，返回标签的名称。返回结果为 `li` | `tag_name = soup.li.name` |
+  | `.li.attrs` | 只能找到第一个 li 标签的属性，返回标签的所有属性，以字典形式表示。返回结果为 `{'id': ''}` | `id = soup.li.attrs`      |
+
+- 使用方法/属性查找
+
+  | 方法/属性     | 描述                                                         | 示例                                                         |
+  | ------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+  | `.find()`     | 查找第一个匹配的标签，返回一个对象                           | `tag = soup.find('a')`<br />`tag = soup.find('a', href = '2')` |
+  | `.find_all()` | 查找所有匹配的标签，返回一个列表                             | `tag = soup.find_all('a')`<br />`tag = soup.find_all(['a', 'span'])` 返回所有的a和span<br />`tag = soup.find_all('a', limit = 2)` 只找前2个a |
+  | `.select()`   | 返回一个列表                                                 | `tag = soup.select('a')` 返回所有 a 标签内容                 |
+  | `.select()`   | 返回一个列表，类选择器                                       | `tag = soup.select('.cls')` 返回 class = "cls" 的所有标签内容<br />`tag = soup.select('#ii')` 返回 id = "ii" 的所有标签内容 |
+  | `.select()`   | 返回一个列表，属性选择器                                     | `tag = soup.select('li[id]')` 查找到 li 标签中有 id 的标签<br />`tag = soup.select('li[id = "l2"]')` 查找到 li 标签中 id 为 l2 的标签 |
+  | `.select()`   | 返回一个列表，层级选择器                                     | `tag = soup.select('div li')` 后代选择器：找到 div 下所有的 li 标签<br />`tag = soup.select('div > ul > li')` 子代选择器<br />`tag = soup.select('div, li')` 组合选择器 |
+  | `.string`     | 获取标签内的字符串内容。**如果标签对象中，除了内容还有标签，那么 string 就获取不到数据** | `string_content = tag.string`                                |
+  | `.get_text()` | 提取标签内的文本内容，忽略所有HTML标签。**如果标签对象中，除了内容还有标签，那么只能使用 get_text()** | **`text = tag.get_text()`**                                  |
+  | `.name`       | 返回标签的名称                                               | `tag_name = tag.name`                                        |
+  | `.attrs`      | 返回标签的所有属性，以字典形式表示                           | `href = tag.attrs['href']`                                   |
+  | `.get()`      | 获取指定属性的值                                             | `href = tag.get('href')`                                     |
+
+  
+
+## 0x23 $Selenium$
 
 
 
