更新redis数据类型笔记

--- a/MySQL_notes/0x10 DDL/0x14 表操作.md
+++ b/MySQL_notes/0x10 DDL/0x14 表操作.md
@@ -17,3 +17,5 @@
 ### 删除
 
 - `drop table [if exists] 表名;` 删除表
+- `truncate table 表1, 表2, ...;` 清空多张表的数据，释放空间，保留表结构。
+  - 注意：只能操作表，不能与 where 一起使用；不能回滚；自增列会被置为初始值；删除数据后不写服务器 log，较 delete 删除速度快。
