--- a/MySQL_notes/0x20 DML/0x20 增、删、改.md
+++ b/MySQL_notes/0x20 DML/0x20 增、删、改.md
@@ -14,5 +14,5 @@
 
 ### 删除数据
 
-- `delete from 表名 [where 条件];` 删除数据
-- delete语句不能删除某一字段的值（如果要操作，可以使用update，将该字段的值置为null）
+- `delete from 表名 [where 条件];` 删除数据，不加 where 条件表示删除这张表的所有数据
+- delete语句不能删除某一字段的值（如果要操作，可以使用update，将该字段的值置为null）。保留表结构，也不释放空间。
